# aoc-2022

./: .gitignore  Cargo.toml  requirements.txt  start_solve.py  tasks.py
.github/workflows/: bench.yml
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs  iai.rs
day01/src/: lib.rs  main.rs
day02/src/: lib.rs  main.rs
day03/src/: lib.rs  main.rs
day04/src/: lib.rs  main.rs
day05/src/: lib.rs  main.rs
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs  part1.rs  part2.rs  state.rs
day17/: Cargo.toml
day17/src/: lib.rs
day18/: Cargo.toml  vis.py
day18/src/: lib.rs
day19/: Cargo.toml
day19/src/: lib.rs
day20/src/: lib.rs
day21/: Cargo.toml
day21/src/: lib.rs
day22/: Cargo.toml
day22/src/: lib.rs  part1.rs  part2.rs
day23/: Cargo.toml
day23/src/: lib.rs
day24/: Cargo.toml
day24/src/: lib.rs  part1.rs  part2.rs
day25/src/: lib.rs
