[workspace]
members = [ "benchmark", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14", "day16", "day15", "day17", "day18", "day19", "day21", "day23", "day25", "day20"]

[workspace.metadata]
year = 2022

[workspace.metadata.day25]
completion_time = 2023-12-06T16:06:28.043606

[workspace.metadata.day20]
start_time = 2023-12-06T17:15:15.112745
completion_time = 2023-12-06T17:34:37.119771
