[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
fixedbitset = "0.4.2"
itertools = "0.10.5"
rayon = "1.6.1"
scan_fmt = "0.2.6"
unbounded-interval-tree = "1.1.2"
